--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,18 @@
 # --- Text files: Normalize line endings to LF and mark as text
-*.html     text eol=lf
-*.css      text eol=lf
-*.js       text eol=lf
-*.ts       text eol=lf
-*.json     text eol=lf
-*.md       text eol=lf
-*.yml      text eol=lf
-*.yaml     text eol=lf
-*.xml      text eol=lf
-*.svg      text eol=lf
-*.txt      text eol=lf
-*.sh       text eol=lf
-*.env      text eol=lf
+*.html              text eol=lf
+*.css               text eol=lf
+*.js                text eol=lf
+*.ts                text eol=lf
+*.json              text eol=lf
+*.md                text eol=lf
+*.yml               text eol=lf
+*.yaml              text eol=lf
+*.xml               text eol=lf
+*.svg               text eol=lf
+*.txt               text eol=lf
+*.sh                text eol=lf
+*.env               text eol=lf
+*.webmanifest       text eol=lf
 
 # --- Treat all files not listed as binary by default (fallback)
 *          text=auto
